[tool.poetry]
name = "fawltypoly"
version = "0.1.0"
description = "An alternative Clojure(ish)-Blender API."
authors = ["ctw <clark.thomaswilliam@zoho.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
basilisp-blender = "^0.4.0"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
